--- a/public/index.html
+++ b/public/index.html
@@ -45,14 +45,24 @@
             </div>
         </main>
 
-        <footer class="app-footer">
-            <div class="social-links">
-                <a href="https://github.com/DANNN9999" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                <a href="https://wa.me/+6283146276723" target="_blank" aria-label="WhatsApp"><i class="fab fa-whatsapp"></i></a>
-                <a href="https://t.me/DANNN_0102" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
-            </div>
-            <p>© 2025 DanX API Services</p>
-        </footer>
+      <footer class="app-footer">
+    <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
+    
+    <div class="social-links">
+        <a href="https://github.com/DANNN9999" target="_blank" aria-label="GitHub">
+            <i class="fab fa-github"></i>
+        </a>
+        <a href="https://wa.me/+6283146276723" target="_blank" aria-label="WhatsApp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="https://t.me/DANNN_0102" target="_blank" aria-label="Telegram">
+            <i class="fab fa-telegram"></i>
+        </a>
+    </div>
+    <p>© 2025 DanX API Services. All rights reserved.</p>
+</footer>
     </div>
 
     <script src="script.js"></script>
