--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
 <body>
     <div class="app-container">
         <header class="app-header">
+            <div class="wave"></div>
+    <div class="wave"></div>
+    <div class="wave"></div>
             <div class="header-content">
                 <img src="https://files.catbox.moe/85t0vq.jpg" alt="Logo" class="logo">
                 <div class="header-text">
