--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <div class="app-container">
         <header class="app-header">
             <div class="wave"></div>
-    <div class="wave"></div>
-    <div class="wave"></div>
+            <div class="wave"></div>
+            <div class="wave"></div>
             <div class="header-content">
                 <img src="https://files.catbox.moe/85t0vq.jpg" alt="Logo" class="logo">
                 <div class="header-text">
@@ -46,26 +46,40 @@
                 <h3>No APIs found</h3>
                 <p>Try a different search term</p>
             </div>
+
+            <!-- API Key Checker Section - Moved to bottom -->
+            <div class="api-key-checker">
+                <h2><i class="fas fa-key"></i> Check Your API Key</h2>
+                <div class="key-check-input">
+                    <input type="text" id="apiKeyInput" placeholder="Enter your API key">
+                    <button id="checkKeyBtn" class="check-key-btn">
+                        <i class="fas fa-check"></i> Check Key
+                    </button>
+                </div>
+                <div id="keyCheckResult" class="key-check-result">
+                    <!-- Result will appear here -->
+                </div>
+            </div>
         </main>
 
-      <footer class="app-footer">
-    <div class="wave"></div>
-    <div class="wave"></div>
-    <div class="wave"></div>
-    
-    <div class="social-links">
-        <a href="https://github.com/DANNN9999" target="_blank" aria-label="GitHub">
-            <i class="fab fa-github"></i>
-        </a>
-        <a href="https://wa.me/+6283146276723" target="_blank" aria-label="WhatsApp">
-            <i class="fab fa-whatsapp"></i>
-        </a>
-        <a href="https://t.me/DANNN_0102" target="_blank" aria-label="Telegram">
-            <i class="fab fa-telegram"></i>
-        </a>
-    </div>
-    <p>© 2025 DanX API Services. All rights reserved.</p>
-</footer>
+        <footer class="app-footer">
+            <div class="wave"></div>
+            <div class="wave"></div>
+            <div class="wave"></div>
+            
+            <div class="social-links">
+                <a href="https://github.com/DANNN9999" target="_blank" aria-label="GitHub">
+                    <i class="fab fa-github"></i>
+                </a>
+                <a href="https://wa.me/+6283146276723" target="_blank" aria-label="WhatsApp">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+                <a href="https://t.me/DANNN_0102" target="_blank" aria-label="Telegram">
+                    <i class="fab fa-telegram"></i>
+                </a>
+            </div>
+            <p>© 2025 DanX API Services. All rights reserved.</p>
+        </footer>
     </div>
 
     <script src="script.js"></script>
